--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
   <p>Before the script...</p>
-
+<a href="https://omid-zamani.github.io/blog">Visit W3Schools</a>
   <script>
     alert( 'Hello, world!' );
   </script>
