--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <body>
 
   <p>Before the script...</p>
-<a href="https://omid-zamani.github.io/blog">Visit W3Schools</a>
+<a href="https://omid-zamani.github.io/blog">Visit blog</a>
   <script>
-    alert( 'Hello, world!' );
+   
   </script>
 
   <p>...After the script.</p>
