--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
+<head>
+    <title>Omid Zamani - Mobile Developer</title>
+    <link rel="stylesheet" type="text/css" href="./node_modules/normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<!-- <body bgcolor="#2b426655"> -->
+
 <body>
+    <script>
+        
+    </script>
+    <div class="a">
+        <img class="im" src="./svg/001-github-1.svg" title="github">
+        <h1 style="font-family:verdana;">Omid Zamani</h1>
+        <h2 class='b2' >React Native & Android Native Developer</h2>
+        <p>I've written programs using java technologies for Android for more than five years. Afterwards I tried to write programs
+            for both iOS and Android with React Native. And I'm learning swift for building native iOS apps. Now, being a
+            professional and skilled Mobile programmer. Familiar with Android SDK, NDK, React-Native and JavaScript. I am
+            enthusiastic about Open-Source programming and Linux</p>
 
-  <p>Before the script...</p>
-<a href="https://omid-zamani.github.io/blog">Visit blog</a>
-  <script>
-   
-  </script>
+        <ul id="links">
+            <li>
+                <a href="https://github.com/omid-zamani">
+                    <img src="./svg/001-github-1.svg" title="github">
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/omidzamanii" class="b2">
+                    <img src="./svg/003-twitter.svg" title="twitter">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/omidzamanii/">
+                    <img src="./svg/004-linkedin.svg"  title="linkedin">
+                </a>
+            </li>
 
-  <p>...After the script.</p>
+        </ul>
+    </div>
+
+    <p id="demo"></p>
+
+
 
 </body>
 
