--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <!-- <body bgcolor="#2b426655"> -->
 
-<body>
+<body background="./bg.jpg">
     <script>
         
     </script>
     <div class="a">
         <img class="im" src="./svg/001-github-1.svg" title="github">
         <h1 style="font-family:verdana;">Omid Zamani</h1>
-        <h2 class='b2' >React Native & Android Native Developer</h2>
+        <h2 class='b2' >React Native <br/>&<br/> Native Android App Developer</h2>
         <p>I've written programs using java technologies for Android for more than five years. Afterwards I tried to write programs
             for both iOS and Android with React Native. And I'm learning swift for building native iOS apps. Now, being a
             professional and skilled Mobile programmer. Familiar with Android SDK, NDK, React-Native and JavaScript. I am
