--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Omid Zamani - Mobile Developer</title>
-    <link rel="stylesheet" type="text/css" href="./node_modules/normalize.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./node_modules/normalize.css"> -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
