--- a/turkey.html
+++ b/turkey.html
@@ -10,7 +10,7 @@ font-family:verdana;">
 margin-right: 100px;
 margin-bottom: 50px;">
 
-        در این دو سالی که در ترکیه بودم، شرایط کاری ترکیه و اجازه اقامت، جزو بیشترین سوالاتی بود که از طرف دوستان ایرانی از من میشد.
+        در این سه سالی که در ترکیه بودم، شرایط کاری ترکیه و اجازه اقامت، جزو بیشترین سوالاتی بود که از طرف دوستان ایرانی از من میشد.
         به همین دلیل تصمیم گرفتم در این پست از شرایط کاری و امور اداری اقامت در ترکیه، همچنین از تجربیات شخصی خودم در این
         دو سال در مورد کار و اقامت در استانبول و قوانین رسمی کار در ترکیه تا اونجا که میدونم بنویسم.
     </h4>
