--- a/turkey.html
+++ b/turkey.html
@@ -1,13 +1,12 @@
 <html>
 
 <body style="    direction: rtl;
-margin-left: 200px;
-margin-right: 200px;
+ width: 80%;
+ margin: auto;
 margin-top: 100px;
 font-family:verdana;">
     <h4 style="text-align: center;
-    margin-left: 100px;
-margin-right: 100px;
+    width: 80%;
 margin-bottom: 50px;">
 
         در این سه سالی که در ترکیه بودم، شرایط کاری ترکیه و اجازه اقامت، جزو بیشترین سوالاتی بود که از طرف دوستان ایرانی از من میشد.
