--- a/turkey.html
+++ b/turkey.html
@@ -27,7 +27,7 @@ margin-bottom: 50px;">
         آنلاین صورت میگیره. یعنی شما باید پیش از اتمام ۹۰ روز، با مراجعه به وبسایت اداره مهاجرت ترکیه، درخواست ملاقات بدین.
         قبل از اقدام از طریق وبسایت، باید برای یک سال، از شرکت های بیمه، خودتون رو بیمه کنید. چون در فرم های وبسایت، شماره
         بیمه نامه الزامی هست. فرم ها رو پر می کنید و در پایان نزدیکترین اداره مهارت رو انتخاب و زمان ملاقات رو تعیین می کنید.
-        در روز تعیین شده به ملاقات میرید و به احتمال ۹۹ درصد بهتون اقامت میدن.
+        در روز تعیین شده به ملاقات میرید.
         </br>
         این فقط اجازه اقامت هست و شما با گرفتن اجازه اقامت تعهد میدین که بدون گرفتن اجازه کار، هیچگونه کاری اعم از پاره وقت و یا
         تمام وقت انجام ندین اما بسیاری از اتباع خارجی، فقط با داشتن اجازه اقامت، در ترکیه کار میکنن که البته غیر قانونی هست
@@ -57,6 +57,26 @@ margin-bottom: 50px;">
 
         </ul>
         بسیاری از اتباع خارجی به سبب شانس بیشتر در پیدا کردن کار این نوع کار رو ترجیح میدن.
+
+        <h4>
+            مهم
+        </h4>
+        الان اقامت توریستی در ترکیه یکم سخت شده. این سختی هم در مراحل اداری هست هم در اخذ اقامت. برای اخذ اقامت از این پس شما باید
+        از کشور خودتون عدم سو پیشینه بگیرید،به تایید کنسولگری ایران در ترکیه و امضای فرمانداری یکی از شهر ها برسونید.غلاوه
+        بر اون باید گواهی سلامت مبنی بر نداشتن بیماری واگیردار به تایید هیئت پزشکی هم از بیمارستان های دولتی بگیرید. بعضا
+        موجودی حساب بانکی از ایران و یا ترکیه هم میخوان.
+
+        </br>
+        قوانین مهاجرتی ترکیه از چند ماه پیش تغییر کرده. روند کار و همچنین شانس اخذ اقامت سختتر شده. در پی همین تغییر قانون، از این
+        پس به افرادی که سه سال و یا بیشتر اقامت توریستی داشتن، دیگه اقامت نمیده. مگر اینکه ملک بخرن که البته اونم شرایط خاصی
+        داره.
+        </br>
+        در کل ترکیه به کسانیکه ۸ سال اقامت توریستی مستمر و بی وقفه داشته باشن، اقامت بلند مدت(دایم) میده. و کسانی که پنج سال اجازه
+        کار مستمر و بی وقفه داشته باشن، شهروندی اعطا میکنه. شما با خرید ملک میتونین در صورتی که هشت سال اینجا بمونین ، اقامت
+        دایم بگیرین. بدون خرید ملک بیش از سه سال نمیتونین اینجا اقامت توریستی داشته باشین.
+
+        </br>
+        </br>
 
     </p>
 
@@ -133,10 +153,7 @@ margin-bottom: 50px;">
         <h1>
             بروزرسانی:
         </h1>
-        الان اقامت توریستی در ترکیه یکم سخت شده. این سختی هم در مراحل اداری هست هم در اخذ اقامت. برای اخذ اقامت از این پس شما باید
-        از کشور خودتون عدم سو پیشینه بگیرید،به تایید کنسولگری ایران در ترکیه و امضای فرمانداری یکی از شهر ها برسونید.غلاوه
-        بر اون باید گواهی سلامت مبنی بر نداشتن بیماری واگیردار به تایید هیئت پزشکی هم از بیمارستان های دولتی بگیرید. بعضا
-        موجودی حساب بانکی از ایران و یا ترکیه هم میخوان.
+
 
         <h2>
             هزینه های زندگی:
