--- a/turkey.html
+++ b/turkey.html
@@ -7,6 +7,7 @@ margin-top: 100px;
 font-family:verdana;">
     <h4 style="text-align: center;
     width: 80%;
+    margin: auto;
 margin-bottom: 50px;">
 
         در این سه سالی که در ترکیه بودم، شرایط کاری ترکیه و اجازه اقامت، جزو بیشترین سوالاتی بود که از طرف دوستان ایرانی از من میشد.
