--- a/turkey.html
+++ b/turkey.html
@@ -124,7 +124,7 @@ margin-bottom: 50px;">
                 اگر متاهل هستید، خانواده شما هم بیمه میشوند.
             </li>
             <li>
-
+                
                 درصورتی که کمتر از یک سال است که در آن شرکت کار می کنید، شما حق مرخصی ندارید! برای اینکه بتونید مرخصی بگیرید، باید یک سالتون
                 در اون شرکت تموم بشه تا حق مرخصی داشته باشید. مدت مرخصی برای افرادی که بیش از یک سال و کمتر از پنج سال در
                 یک شرکت کار کرده اند، ۱۴ روز در سال است. برای اینکه همکاریتون رو با شرکت قطع کنید، باید طبق مدت زمانی که
@@ -133,6 +133,7 @@ margin-bottom: 50px;">
                 چند هفته باهاتون کار کنه و روزانه چند ساعت بهتون وقت بده (مرخصی با حقوق) تا کار پیدا کنید. در صورتی که شرکت
                 این کار رو نکنه، شما میتونید شکایت کنید و غرامت بگیرید.
             </li>
+        </ul>
 
             <h2>
 
@@ -146,6 +147,12 @@ margin-bottom: 50px;">
             شرکت ها هزینه ناهار رو با کارت های اعتباری هر ماه به شما پرداخت میکنن و بسیاری از شرکت ها در صورتی که سرویس رفت
             و آمد نداشته باشند، هزینه رفت و آمد رو بهتون میدن. البته این اطلاعات من فقط در مورد قرارداد های کاری حوزه آی
             تی هست و بنده در مورد سایر حوزه ها اطلاعی ندارم.
+    </span>
+
+    <span>
+            <h2>  بانک ها </h2>
+            قبلا دو تا بانک بود که برای ایرانی ها حساب باز میکرد. یکیش بانک«ایش» و اونیکی هم «زراعت» که بنا به آخرین خبری که از ایرانیا شنیدم، بانک «ایش» دیگه حساب باز نمیکنه. برای افتتاح حساب در بانک زراعت، باید قولنامه رسمی کرایه خانه که به تایید دفتر اسناد رسمی رسیده داشته باشین
+            
     </span>
 
 
