--- a/turkey.html
+++ b/turkey.html
@@ -26,8 +26,8 @@ margin-bottom: 50px;">
         ترک کنید اما در صورتی که پرداخت نکنید، تا چند سال حق ورود دوباره به کشور ترکیه رو بهتون نمیدن. در صورتی که میخواین
         بیشتر از ۹۰ روز در ترکیه بمونین باید برای «اجازه اقامت» اقدام کنید. خوشبختانه چند سالی هست که این قبیل کار ها بصورت
         آنلاین صورت میگیره. یعنی شما باید پیش از اتمام ۹۰ روز، با مراجعه به وبسایت اداره مهاجرت ترکیه، درخواست ملاقات بدین.
-        قبل از اقدام از طریق وبسایت، باید برای یک سال، از شرکت های بیمه، خودتون رو بیمه کنید. چون در فرم های وبسایت، شماره
-        بیمه نامه الزامی هست. فرم ها رو پر می کنید و در پایان نزدیکترین اداره مهارت رو انتخاب و زمان ملاقات رو تعیین می کنید.
+        قبل از اقدام از طریق وبسایت، باید برای یک سال، از شرکت های بیمه، خودتون رو بیمه کنید.(قیمت حدودی بیمه بسته به سن و بیمه گذار برای یک سال از ۱۴۰ لیر تا ۱۰۰۰ لیر هست) چون در فرم های وبسایت، شماره
+        بیمه نامه الزامی هست. فرم ها رو پر می کنید(روز درخواست اقامت با شروع بیمه باید یکی باشد) و در پایان نزدیکترین اداره مهارت رو انتخاب و زمان ملاقات رو تعیین می کنید.
         در روز تعیین شده به ملاقات میرید.
         </br>
         این فقط اجازه اقامت هست و شما با گرفتن اجازه اقامت تعهد میدین که بدون گرفتن اجازه کار، هیچگونه کاری اعم از پاره وقت و یا
@@ -151,8 +151,8 @@ margin-bottom: 50px;">
 
     <span>
             <h2>  بانک ها </h2>
-            قبلا دو تا بانک بود که برای ایرانی ها حساب باز میکرد. یکیش بانک«ایش» و اونیکی هم «زراعت» که بنا به آخرین خبری که از ایرانیا شنیدم، بانک «ایش» دیگه حساب باز نمیکنه. برای افتتاح حساب در بانک زراعت، باید قولنامه رسمی کرایه خانه که به تایید دفتر اسناد رسمی رسیده داشته باشین
-            
+           قبلا دو تا بانک بود که برای ایرانی ها حساب باز میکرد. یکیش بانک«ایش» و اونیکی هم «زراعت» که بنا به آخرین خبری که از ایرانیا شنیدم، بانک «ایش» دیگه حساب باز نمیکنه. برای افتتاح حساب در بانک زراعت، باید قولنامه رسمی کرایه خانه که به تایید دفتر اسناد رسمی رسیده داشته باشین
+            و همینطور تاییدیه نفوس از اداره نفوس که محل سکونتتون تایید شده
     </span>
 
 
